# shellsense

./: .coverage  .gitignore  README.md  pyproject.toml
examples/: config.toml  hooks.json  zsh-setup.sh
src/shellsense/: __init__.py
src/shellsense/cli/: __init__.py  main.py  output.py
src/shellsense/core/: __init__.py  analyzer.py  models.py  parser.py  predictor.py  risk.py
src/shellsense/db/: __init__.py  config.py  history.py  safety.py
src/shellsense/hooks/: __init__.py  generator.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_history.py  test_hooks.py  test_parser.py  test_predictor.py  test_risk.py  test_safety_db.py
