[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellsense"
version = "0.1.0"
description = "Terminal safety tool that predicts the consequences of shell commands before you run them"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Steven" }]
keywords = ["shell", "safety", "terminal", "cli", "dry-run"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
shellsense = "shellsense.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/shellsense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=shellsense --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
